# Compotes

./: .env  .env.test  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .npmrc  .php-cs-fixer.php  .php_cs  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  Dockerfile.full  Dockerfile.standalone  LICENSE  Makefile  Procfile  README.md  composer.json  dev.js  dev.mjs  docker-compose.yaml  package-lock.json  package.json  phpstan.neon  phpunit.xml.dist  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: docker.yml  main.yaml  node.yml  php.yml
account_exports/: 2010-01.csv
assets/css/: app.css  bootstrap-tagsinput.scss  draggable.css
assets/js/: admin.js  analytics.ts  app.js  app.ts  draggable.ts  operation-add-tags.ts
config/: bootstrap.php  bundles.php  routes.yaml  services.yaml
config_backup/: easyadmin-config.backup
doc/: install_heroku.md  install_server.md  operations.md  setup_admin.md
heroku/: create_project  nginx_host.conf
migrations/: Version20191121151638.php  Version20191121204829.php  Version20200111225430.php  Version20200215101535.php  Version20200308132927.php  Version20200322211857.php  Version20201125132026.php
old/src-tauri/: tauri.conf.json
prod/: apache_vhost.conf  nginx_vhost.conf
public/: index.html
resources/: example_operation_file.ods
sample_data/: 2010-01-lite.csv  2010-01.csv  sample.ofx
src/: App.svelte  Kernel.php  app.html  global.d.ts  main.ts  routes.ts  splash.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  main.rs
src-tauri/src/commands/: bank_account_create.rs  bank_account_find_all.rs  bank_account_get_by_id.rs  bank_account_update.rs  get_bank_accounts.rs  get_operations.rs  get_tag_rules.rs  get_tags.rs  import_operations.rs  operation_delete.rs  operation_update_details.rs  operation_update_ignore_from_analytics.rs  operation_update_tags.rs  operations_get.rs  operations_get_analytics.rs  operations_get_by_id.rs  operations_get_count.rs  operations_get_triage.rs  operations_get_triage_count.rs  save_bank_account.rs  save_tag.rs  save_tag_rule.rs  sync.rs  tag_create.rs  tag_rule_create.rs  tag_rule_update.rs  tag_rules_get.rs  tag_update.rs  tags_get.rs
src-tauri/src/entities/: bank_accounts.rs  operation.rs  operations.rs  tag_rules.rs  tags.rs
src-tauri/src/migrations/: 0-init.sql  U1__init.sql  mod.rs
src-tauri/src/serialization/: deserialize_tags_ids.rs
src-tauri/src/structs/: filter.rs  filter_type.rs  operation_state.rs
src-tauri/src/utils/: logo.rs
src/Admin/: AdminBankAccountController.php  AdminTagController.php  (+4 more)
static/: splash.css
templates/: analytics.html.twig  import_operations.html.twig
tests/: AdminTest.php  BrowserLoginTrait.php  phpstan-object-manager.php
translations/: messages.en.yaml
(+354 files in other folders)
