[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow = "1.0"
dirs = "5.0"
regex = "1.8"
serde_json = "1.0"
serde_rusqlite = { version = "0.31", features = [ ] }
serde = { version = "1.0", features = [ "derive" ] }
sha2 = { version = "0.10", features = [ ] }
chrono = { version = "0.4", features = [ "serde" ] }
rusqlite_migration = { version = "1.0", features = [ ] }
rusqlite = { version = "0.28", features = [ "bundled-full", "functions", "serde_json" ] }
slugify = "0.1"
tauri = { version = "1.2", features = ["shell-open", "api-all"] }
tauri-codegen = "1.2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
