[package]
name = "compotes"
version = "1.0.0"
description = "A desktop app to visualize bank account operations"
authors = [ "Alex \"Pierstoval\" Rock <pierstoval@gmail.com>" ]
license = "AGPL-3"
repository = "https://github.com/Orbitale/Compotes"
default-run = "compotes"
edition = "2018"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
anyhow = "1.0"
dirs = "5.0"
regex = "1.9"
serde_json = "1.0"
serde_rusqlite = { version = "0.31", features = [ ] }
serde = { version = "1.0", features = [ "derive" ] }
sha2 = { version = "0.10", features = [ ] }
chrono = { version = "0.4", features = [ "serde" ] }
rusqlite_migration = { version = "1.0", features = [ ] }
rusqlite = { version = "0.28", features = [ "bundled-full", "functions", "serde_json" ] }
slugify = "0.1"
tauri = { version = "1.4", features = ["api-all"] }
tauri-codegen = { version = "1.4", features = [ ] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
